# insurance-recommendation

./: .gitignore  pyproject.toml  requirements.txt
src/health_policy_recommendation/: __init__.py  main.py
src/health_policy_recommendation/docs/: Code review notes.docx  approaches.docx
src/health_policy_recommendation/model_services/: strategy1.py  strategy2.py  strategy3.py
src/health_policy_recommendation/models/: insurance_model.pkl  label_encoder.pkl  model_features.pkl
src/health_policy_recommendation/models/content_based/: company_vectors.csv  region_budget_encoder.pkl
src/health_policy_recommendation/notebooks/: Experiment_01 _Final_ash.ipynb  Experiment_01 _Final_cs.ipynb  Experiment_02_cs.ipynb  Experiment_03_cs.ipynb  Experiment_041_cs.ipynb  Experiment_042_cs.ipynb  Experiment_04_cs.ipynb  Experiment_05.ipynb  Experiment_05_cs.ipynb  Health_Insurance_Recommendation_Hybrid_03.ipynb  Hybrid ML + XAI recommendation system pipeline in code_SD.ipynb  approach1.ipynb  approach2.ipynb  approach3_hybrid_fusion_recommenadation.ipynb  data_creation.ipynb  experiment_02_ash.ipynb
src/health_policy_recommendation/notebooks/RnD/: shap_force_plot.html
src/health_policy_recommendation/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/health_policy_recommendation/notebooks/catboost_info/learn/: events.out.tfevents
src/health_policy_recommendation/schemas/: request_bodies.py
src/health_policy_recommendation/utils/: logger.py
